Enhance Cypher export to include dynamic method properties based on settings and customizable file name prefix